--- a/META.yml
+++ b/META.yml
@@ -20,10 +20,9 @@ prereqs:
   runtime:
     requires:
       Moo: 0.009001
+      MooX::Types::CLike: 0.90
       MooX::Types::MooseLike::Base: 0.03
-      MooX::Types::MooseLike::CLike: 0
       NetAddr::MAC: 0.7
-      Scalar::Utils: 0
       perl: v5.10.1
       sanity: 0.91
   test:
