--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = NetAddr-BridgeId
+name    = NetAddr-BridgeID
 author  = Brendan Byrd <BBYRD@CPAN.org>
 license = Artistic_2_0
 copyright_holder = Brendan Byrd
@@ -10,7 +10,7 @@ copyright_year   = 2012
 [MakeMaker]
 
 [Git::NextVersion]
-first_version = 0.90
+first_version = 0.95
 
 [Git::GatherDir]
 
@@ -61,7 +61,11 @@ trailing_whitespace = 0
 
 ; Prereqs
 [@Prereqs]
+skip = ^MooX::Types::MooseLike
 minimum_perl = 5.10.1
+
+[Prereqs]
+MooX::Types::MooseLike = 0.03  ; no $VERSION on ::Base
 
 [CheckPrereqsIndexed]
 
@@ -81,7 +85,6 @@ directory = corpus
 meta_noindex = 1        ; respect prior no_index directives
 
 [MetaResourcesFromGit]
-x_irc          = irc://irc.perl.org/#distzilla
 bugtracker.web = https://github.com/%a/%r/issues
 
 ; Post-build plugins
