--- a/dist.ini
+++ b/dist.ini
@@ -94,7 +94,7 @@ copy = README.pod
 
 ; Post-build Git plugins
 [TravisYML]
-;test_min_deps = 1
+test_min_deps = 1
 
 [Git::CheckFor::CorrectBranch]
 [Git::CommitBuild]
