--- a/dist.ini
+++ b/dist.ini
@@ -2,62 +2,17 @@ name    = NetAddr-BridgeID
 author  = Brendan Byrd <BBYRD@CPAN.org>
 license = Artistic_2_0
 copyright_holder = Brendan Byrd
-copyright_year   = 2012
 
-[ReportPhase]
+[@Filter]
+-bundle = @Author::BBYRD
+-remove = @Prereqs
+-remove = AutoPrereqs
+-remove = MinimumPerl
+-remove = MinimumPrereqs
+-remove = PrereqsClean
 
-; Makefile.PL maker
-[MakeMaker]
-
-[Git::NextVersion]
+x_irc = irc://irc.perl.org/
 first_version = 0.95
-
-[Git::GatherDir]
-
-; File modifiers
-[OurPkgVersion]
-[PodWeaver]
-
-; File pruners
-[PruneCruft]
-
-; Extra file creation
-[GitFmtChanges]
-[ManifestSkip]
-[Manifest]
-[License]
-[ReadmeAnyFromPod / ReadmeHtmlInBuild]
-[ReadmeAnyFromPod / ReadmePodInBuild]
-[InstallGuide]
-[ExecDir]
-
-; t/* tests
-[Test::Compile]
-
-; POD tests
-[PodCoverageTests]
-[PodSyntaxTests]
-;[Test::PodSpelling]  ; Win32 install problems
-
-; Other xt/* tests
-[RunExtraTests]
-;[MetaTests]  ; until Test::CPAN::Meta supports 2.0
-[NoTabsTests]
-[Test::EOL]
-trailing_whitespace = 0
-
-[Test::CPAN::Meta::JSON]
-[Test::CheckDeps]
-[Test::Portability]
-;[Test::Pod::LinkCheck]  ; Both of these are borked...  
-;[Test::Pod::No404s]     ; ...I really need to create my own
-[Test::Synopsis]
-[Test::MinimumVersion]
-[ReportVersions::Tiny]
-[Test::CheckManifest]
-[Test::DistManifest]
-[Test::UseAllModules]
-[Test::Version]
 
 ; Prereqs
 [@Prereqs]
@@ -66,67 +21,4 @@ minimum_perl = 5.10.1
 
 [Prereqs]
 MooX::Types::MooseLike = 0.03  ; no $VERSION on ::Base
-
-[CheckPrereqsIndexed]
-
-; META maintenance
-[MetaConfig]
-[MetaJSON]
-[MetaYAML]
-version = 2
-
-[MetaNoIndex]
-directory = t
-directory = xt
-directory = examples
-directory = corpus
-
-[MetaProvides::Package]
-meta_noindex = 1        ; respect prior no_index directives
-
-[MetaResourcesFromGit]
-bugtracker.web = https://github.com/%a/%r/issues
-
-; Post-build plugins
-[CopyFilesFromBuild]
-move = .gitignore
-copy = README.pod
-
-; Post-build Git plugins
-[TravisYML]
-test_min_deps = 1
-
-[Git::CheckFor::CorrectBranch]
-[Git::CommitBuild]
-release_branch = build/%b
-release_message = Release build of v%v (on %b)
-
-[@Git]
-allow_dirty = dist.ini
-allow_dirty = .travis.yml
-allow_dirty = README.pod
-changelog =
-commit_msg = Release v%v
-push_to = origin
-push_to = origin build/master:build/master
-
-[GitHub::Update]
-metacpan = 1
-
-[TestRelease]
-[ConfirmRelease]
-[UploadToCPAN]
-[InstallRelease]
-[Clean]
-
-; PodWeaver deps
-; authordep Pod::Weaver::Plugin::WikiDoc
-; authordep Pod::Weaver::Plugin::Encoding
-; authordep Pod::Weaver::Section::Availability
-; authordep Pod::Weaver::Section::Support
-; authordep Pod::Elemental::Transformer::List
-
-; sanity deps
-; authordep autovivification
-; authordep indirect
-; authordep multidimensional
+sanity = 0.94
